<resources>
    <string name="app_name">Pocket dictionary</string>
    <string name="synonyms">Synonyms</string>
    <string name="definitions">Definitions</string>
    <string name="antonyms">Antonyms</string>
    <string name="rhymes">Rhymes</string>
    <string name="getDefinition">Search</string>
    <string name="offlineDictionary">Offline Dictionary</string>
    <string name="onlineDictionary">Online Dictionary</string>
    <string name="offlineMode">Switch to offline mode</string>
    <string name="onlineMode">Switch to online mode</string>
</resources>